fix touch offset by resetting nexusui content text-align

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.App .touchui {
+  text-align: initial;
+}
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
